force-app/main/default/objects/Real_Estate_Property__c/Real_Estate_Property__c.object-meta.xml
<CustomObject>
    <label>Real Estate Property</label>
    <nameField>
        <label>Real Estate Property Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Real Estate Properties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>