force-app/main/default/objects/Real_Estate_Property__c/fields/Amenities__c.field-meta.xml
<CustomField>
    <fullName>Amenities__c</fullName>
    <label>Amenities</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lift</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Gym</fullName>
            </value>
            <value>
                <fullName>Garden</fullName>
            </value>
            <value>
                <fullName>Parking</fullName>
            </value>
            <value>
                <fullName>Pool</fullName>
            </value>
            <value>
                <fullName>Intercom</fullName>
            </value>
            <value>
                <fullName>Club House</fullName>
            </value>
            <value>
                <fullName>Play Area</fullName>
            </value>
            <value>
                <fullName>Maintenance Staff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>