force-app/main/default/objects/Real_Estate_Property__c/fields/Bedrooms__c.field-meta.xml
<CustomField>
    <fullName>Bedrooms__c</fullName>
    <description>Number of Bedrooms</description>
    <label># Bedrooms</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>