force-app/main/default/objects/Real_Estate_Property__c/fields/Floors__c.field-meta.xml
<CustomField>
    <fullName>Floors__c</fullName>
    <description>Number of floors for this property</description>
    <label># Floors</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>