force-app/main/default/objects/Real_Estate_Property__c/fields/Furnished__c.field-meta.xml
<CustomField>
    <fullName>Furnished__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether or not the property is already furnished</description>
    <label>Furnished</label>
    <type>Checkbox</type>
</CustomField>