force-app/main/default/objects/Real_Estate_Property__c/fields/Garage_Allocations__c.field-meta.xml
<CustomField>
    <fullName>Garage_Allocations__c</fullName>
    <description>Amount of cars that can be parked in a garage spot</description>
    <label># Garage Allocations</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>