force-app/main/default/objects/Real_Estate_Property__c/fields/Property_Description__c.field-meta.xml
<CustomField>
    <fullName>Property_Description__c</fullName>
    <description>General description of the property</description>
    <label>Property Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>