force-app/main/default/objects/Real_Estate_Property__c/fields/Square_Feet__c.field-meta.xml
<CustomField>
    <fullName>Square_Feet__c</fullName>
    <description>Total area of the property in square feet</description>
    <label>Square Feet</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>