force-app/main/default/objects/Real_Estate_Property__c/listViews/Real_Estate_Properties.listView-meta.xml
<ListView>
    <fullName>Real_Estate_Properties</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Price__c</columns>
    <columns>Sale_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Real Estate Properties</label>
</ListView>